# three_body_simulator

./: CMakeLists.txt  LICENSE  README.md  readme.md
include/body/: body.h
include/camera/: camera.h
include/glad/: glad.h
include/shader/: shader.h
lib/glad/: glad.c
shader/: path.fs  sphere_lt.fs  sphere_lt.vs
src/: Three-Body_Simulator.cpp
